<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/newRecipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorAccentLight"
                    android:ems="10"
                    android:hint="Recipe name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/colorTextOnA"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/newRecipePrepTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorAccentLight"
                    android:ems="10"
                    android:hint="Prep time in minutes"
                    android:textColor="@color/colorTextOnA"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textCursorDrawable="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newRecipeName" />

                <EditText
                    android:id="@+id/newRecipeServingSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorAccentLight"
                    android:ems="10"
                    android:hint="Serving size"
                    android:textColor="@color/colorTextOnA"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textCursorDrawable="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newRecipePrepTime" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="Prep time:"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextOnA"
                    app:layout_constraintEnd_toStartOf="@+id/newRecipePrepTime"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newRecipeName" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="28dp"
                    android:text="Servings:"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextOnA"
                    app:layout_constraintEnd_toStartOf="@+id/newRecipeServingSize"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingredients"
                android:textColor="@color/colorTextOnA"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_new_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/add_ingredient_button"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/add"
                    android:background="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/remove_ingredient_button"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/remove"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description/Steps"
                android:textColor="@color/colorTextOnA"
                android:textAlignment="center"
                android:textSize="24sp" />

            <MultiAutoCompleteTextView
                android:id="@+id/newRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccentLight"
                android:hint="Steps and or description"
                android:textColor="@color/colorTextOnA"
                android:padding="10dp"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tags"
                android:textColor="@color/colorTextOnA"
                android:textAlignment="center"
                android:textSize="24sp" />

            <MultiAutoCompleteTextView
                android:id="@+id/newRecipeTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccentLight"
                android:hint="Tags that help find the recipe. Tea,Cabbage,Onion..."
                android:textColor="@color/colorTextOnA"
                android:padding="10dp"
                android:textCursorDrawable="@null" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/finish_ingredient_button"
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_filed"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>