<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:scaleType="center"
        android:background="@color/colorPrimary"
        android:text="Make recipe"
        android:textColor="@color/colorTextOnP"
        android:textSize="25dp"
        android:gravity="center"
        android:contentDescription="@string/app_name" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/alert_radio_grocery">

        <RadioButton android:id="@+id/alert_radio_grocery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:text="Add to groceries " />

        <RadioButton
            android:id="@+id/alert_radio_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:text="Add to schedule" />

        <RadioButton android:id="@+id/alert_radio_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:text="Both" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alert_groceries"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <EditText
            android:id="@+id/alert_groceries_servings"
            android:layout_width="140dp"
            android:layout_height="31dp"
            android:background="@color/colorAccentLight"
            android:textColor="@color/colorTextOnA"
            android:inputType="number"
            android:paddingStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/alert_groceries_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/alert_groceries_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Servings amount: "
            android:textSize="17dp"
            android:textColor="@color/colorTextOnP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/alert_groceries_servings"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alert_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="When do you want to eat this: "
            android:textColor="@color/colorTextOnP"
            app:layout_constraintBottom_toTopOf="@+id/datePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="165dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>